fix(db): add V35 integrity hardening for optimistic locking and N+1 fixes
Introduce lock_version columns and submission audit timestamps, narrow unsafe
JPA cascades, return 409 CONCURRENT_MODIFICATION on stale writes, and replace
per-row roster/CSV/gradebook queries with bulk fetches plus paginated endpoints.

Co-authored-by: Cursor <cursoragent@cursor.com>